# nucleol432-experiments

./: .gitmodules  CMakeLists.txt
cmake/: FindMCU.cmake
src/: CMakeLists.txt
src/ledblink/: main.cpp  stm32l4xx_hal_msp.c  stm32l4xx_it.c  stm32l4xx_it.h
src/usart-print/: main.cpp
